syntax = "proto3";

package golem.rib;

import "golem/rib/expr.proto";
import "wasm/ast/type.proto";

message FunctionDictionary {
  repeated FunctionEntry map = 1;
}

message FunctionEntry {
  FunctionNameType key = 1;
  FunctionType value = 2;
}

message ResourceMethodDictionary {
  repeated ResourceMethodEntry map = 1;
}

message ResourceMethodEntry {
  FullyQualifiedResourceMethod key = 1;
  FunctionType value = 2;
}

message InstanceType {
  oneof instance {
    GlobalInstance global = 1;
    PackageInstance package = 2;
    InterfaceInstance interface = 3;
    PackageInterfaceInstance package_interface = 4;
    ResourceInstance resource = 5;
  }
}

message GlobalInstance {
  golem.rib.Expr worker_name = 1;
  FunctionDictionary functions_global = 2;
}

message PackageInstance {
  golem.rib.Expr worker_name = 1;
  PackageName package_name = 2;
  FunctionDictionary functions_in_package = 3;
}

message InterfaceInstance {
  golem.rib.Expr worker_name = 1;
  InterfaceName interface_name = 2;
  FunctionDictionary functions_in_interface = 3;
}

message PackageInterfaceInstance {
  golem.rib.Expr worker_name = 1;
  PackageName package_name = 2;
  InterfaceName interface_name = 3;
  FunctionDictionary functions_in_package_interface = 4;
}

message ResourceInstance {
  golem.rib.Expr worker_name = 1;
  optional PackageName package_name = 2;
  optional InterfaceName interface_name = 3;
  string resource_constructor = 4;
  repeated golem.rib.Expr resource_args = 5;
  ResourceMethodDictionary resource_method_dict = 6;
}

// Function-related messages
message FunctionNameType {
  oneof function_name {
    FullyQualifiedFunctionName function = 1;
    FullyQualifiedResourceConstructor resource_constructor = 2;
    FullyQualifiedResourceMethod resource_method = 3;
  }
}

message FullyQualifiedFunctionName {
  optional PackageName package_name = 1;
  optional InterfaceName interface_name = 2;
  string function_name = 3;
}

message FullyQualifiedResourceConstructor {
  optional PackageName package_name = 1;
  optional InterfaceName interface_name = 2;
  string resource_name = 3;
}

message FullyQualifiedResourceMethod {
  optional PackageName package_name = 1;
  optional InterfaceName interface_name = 2;
  string resource_name = 3;
  string method_name = 4;
}

message PackageName {
  string namespace = 1;
  string package_name = 2;
  optional string version = 3;
}

message InterfaceName {
  string name = 1;
  optional string version = 2;
}

message FunctionType {
  repeated wasm.ast.Type parameter_types = 1;
  repeated wasm.ast.Type return_type = 2;
}